unpackaged/main/default/objects/Account/fields/Changes_only__c.field-meta.xml
<CustomField>
    <fullName>Changes_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changes only</label>
    <type>Checkbox</type>
</CustomField>