unpackaged/main/default/objects/Account/fields/Lemon_team_approved__c.field-meta.xml
<CustomField>
    <fullName>Lemon_team_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do the lemon team approve of this account?</description>
    <label>Lemon team approved</label>
    <type>Checkbox</type>
</CustomField>