unpackaged/main/default/objects/Account/fields/loooooooooooooooooooooooooooongname40__c.field-meta.xml
<CustomField>
    <fullName>loooooooooooooooooooooooooooongname40__c</fullName>
    <defaultValue>&quot;heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeello&quot;</defaultValue>
    <description>Does this contribute to the length?</description>
    <inlineHelpText>Or does this contribute to the length? Some &quot; quotes &apos; in here. Some additional &apos; &quot; quotes here</inlineHelpText>
    <label>loooooooooooooooooooooooooooongname40</label>
    <length>255</length>
    <type>Text</type>
</CustomField>