unpackaged/main/default/objects/Account/fields/NewFieldToTestProperties__c.field-meta.xml
<CustomField>
    <fullName>NewFieldToTestProperties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFieldToTestProperties</label>
    <type>Checkbox</type>
</CustomField>