unpackaged/main/default/objects/Account/fields/Some_text_field__c.field-meta.xml
<CustomField>
    <fullName>Some_text_field__c</fullName>
    <label>Some text field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>